--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -67,6 +67,18 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#swaggerConfig">src/config/swagger.config.ts</a>
+            </td>
+            <td>variable</td>
+            <td>swaggerConfig</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./miscellaneous/variables.html#typeOrmConfig">src/config/typeorm.config.ts</a>
             </td>
             <td>variable</td>
@@ -79,13 +91,61 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./classes/UserDto.html">src/dtos/user.dto.ts</a>
+                <a href="./miscellaneous/variables.html#GetUser">src/decorators/get-user.decorator.ts</a>
             </td>
-            <td>class</td>
-            <td>UserDto</td>
+            <td>variable</td>
+            <td>GetUser</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/4)</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/AuthDto.html">src/dtos/auth.dto.ts</a>
+            </td>
+            <td>class</td>
+            <td>AuthDto</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/TaskCreateDto.html">src/dtos/task-create.dto.ts</a>
+            </td>
+            <td>class</td>
+            <td>TaskCreateDto</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/TaskUpdateDto.html">src/dtos/task-update.ts</a>
+            </td>
+            <td>class</td>
+            <td>TaskUpdateDto</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/UserCreateDto.html">src/dtos/user-create.dto.ts</a>
+            </td>
+            <td>class</td>
+            <td>UserCreateDto</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/5)</span>
             </td>
         </tr>
         <tr class="low">
@@ -110,6 +170,30 @@
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/8)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/HttpExceptionFilter.html">src/exceptions/http-exception.filter.ts</a>
+            </td>
+            <td>class</td>
+            <td>HttpExceptionFilter</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/2)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/LogginInterceptor.html">src/interceptors/loggin.interceptor.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>LogginInterceptor</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/2)</span>
             </td>
         </tr>
         <tr class="low">
@@ -151,6 +235,18 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./interfaces/JwtPayload.html">src/modules/auth/jwt-payload.interface.ts</a>
+            </td>
+            <td>interface</td>
+            <td>JwtPayload</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/2)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./injectables/JwtStrategy.html">src/modules/auth/jwt.strategy.ts</a>
             </td>
             <td>injectable</td>
@@ -169,7 +265,7 @@
             <td>TasksController</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/2)</span>
+                <span class="coverage-count">(0/6)</span>
             </td>
         </tr>
         <tr class="low">
@@ -181,7 +277,7 @@
             <td>TasksService</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
+                <span class="coverage-count">(0/7)</span>
             </td>
         </tr>
         <tr class="low">
@@ -193,7 +289,19 @@
             <td>ValidationPipe</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/3)</span>
+                <span class="coverage-count">(0/5)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/TaskRepository.html">src/repositories/TaskRepository.ts</a>
+            </td>
+            <td>class</td>
+            <td>TaskRepository</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/6)</span>
             </td>
         </tr>
         <tr class="low">
