--- a/documentation/classes/TaskUpdateDto.html
+++ b/documentation/classes/TaskUpdateDto.html
@@ -27,7 +27,7 @@
                    <compodoc-menu mode="normal"></compodoc-menu>
                </div>
                <!-- START CONTENT -->
-               <div class="content miscellaneous-variables">
+               <div class="content class">
                    <div class="content-data">
 
 
@@ -40,134 +40,175 @@
 
 
 
+<ol class="breadcrumb">
+  <li>Classes</li>
+  <li>TaskUpdateDto</li>
+</ol>
+
+<ul class="nav nav-tabs" role="tablist">
+        <li class="active">
+            <a href="#info" role="tab" id="info-tab" data-toggle="tab" data-link="info">Info</a>
+        </li>
+        <li >
+            <a href="#source" role="tab" id="source-tab" data-toggle="tab" data-link="source">Source</a>
+        </li>
+</ul>
+
+<div class="tab-content">
+    <div class="tab-pane fade active in" id="c-info">
+        <p class="comment">
+            <h3>File</h3>
+        </p>
+        <p class="comment">
+            <code>src/dtos/task-update.ts</code>
+        </p>
+
+
+
+
+
+            <section>
+    <h3 id="index">Index</h3>
+    <table class="table table-sm table-bordered index-table">
+        <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <h6><b>Properties</b></h6>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <ul class="index-list">
+                            <li>
+                                <a href="#description">description</a>
+                            </li>
+                            <li>
+                                <a href="#title">title</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+
+
+
+
+
+
+        </tbody>
+    </table>
+</section>
+
+
+            <section>
+    
+        <h3 id="inputs">
+            Properties
+        </h3>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="description"></a>
+                        <span class="name">
+                            <b>
+                            description</b>
+                            <a href="#description"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <b>Decorators : </b>
+                            <br />
+                            <code>
+                                @IsOptional()<br />@ApiProperty()<br />@IsString()<br />
+                            </code>
+                        </td>
+                    </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/dtos/task-update.ts:13</a></div>
+                            </td>
+                        </tr>
+
+
+            </tbody>
+        </table>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="title"></a>
+                        <span class="name">
+                            <b>
+                            title</b>
+                            <a href="#title"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <b>Decorators : </b>
+                            <br />
+                            <code>
+                                @IsOptional()<br />@ApiProperty()<br />@IsString()<br />
+                            </code>
+                        </td>
+                    </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                    <div class="io-line">Defined in <a href="" data-line="8" class="link-to-prism">src/dtos/task-update.ts:8</a></div>
+                            </td>
+                        </tr>
+
+
+            </tbody>
+        </table>
+</section>
+
+
+
+
+
+
+
+    </div>
+
+
+    <div class="tab-pane fade  tab-source-code" id="c-source">
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { IsString, IsOptional } from &quot;class-validator&quot;;
+import { ApiProperty } from &#x27;@nestjs/swagger&#x27;;
+
+export class TaskUpdateDto {
+    @IsOptional()
+    @ApiProperty()
+    @IsString()
+    title: string;
+
+    @IsOptional()
+    @ApiProperty()
+    @IsString()
+    description: string;
+}</code></pre>
+    </div>
+</div>
 
 
 
                    
 
-<ol class="breadcrumb">
-  <li>Miscellaneous</li>
-  <li>Variables</li>
-</ol>
-
-<section>
-    <h3 id="index">Index</h3>
-    <table class="table table-sm table-bordered index-table">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <ul class="index-list">
-                        <li>
-                            <a href="#GetUser" title="src/decorators/get-user.decorator.ts"><b>GetUser</b>&nbsp;&nbsp;&nbsp;(src/.../get-user.decorator.ts)</a>
-                        </li>
-                        <li>
-                            <a href="#swaggerConfig" title="src/config/swagger.config.ts"><b>swaggerConfig</b>&nbsp;&nbsp;&nbsp;(src/.../swagger.config.ts)</a>
-                        </li>
-                        <li>
-                            <a href="#typeOrmConfig" title="src/config/typeorm.config.ts"><b>typeOrmConfig</b>&nbsp;&nbsp;&nbsp;(src/.../typeorm.config.ts)</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</section>
-
-    <h3>src/decorators/get-user.decorator.ts</h3>
-    <section>
-    <h3></h3>        <table class="table table-sm table-bordered">
-            <tbody>
-                <tr>
-                    <td class="col-md-4">
-                        <a name="GetUser"></a>
-                        <span class="name">
-                            <b>
-                            GetUser</b>
-                            <a href="#GetUser"><span class="icon ion-ios-link"></span></a>
-                        </span>
-                    </td>
-                </tr>
-                    <tr>
-                        <td class="col-md-4">
-                            <i>Default value : </i><code>createParamDecorator((data, req): User &#x3D;&gt; {
-    return req.args.find(item &#x3D;&gt; item.res)[&#x27;user&#x27;];
-})</code>
-                        </td>
-                    </tr>
-
-
-            </tbody>
-        </table>
-</section>
-    <h3>src/config/swagger.config.ts</h3>
-    <section>
-    <h3></h3>        <table class="table table-sm table-bordered">
-            <tbody>
-                <tr>
-                    <td class="col-md-4">
-                        <a name="swaggerConfig"></a>
-                        <span class="name">
-                            <b>
-                            swaggerConfig</b>
-                            <a href="#swaggerConfig"><span class="icon ion-ios-link"></span></a>
-                        </span>
-                    </td>
-                </tr>
-                    <tr>
-                        <td class="col-md-4">
-                            <i>Default value : </i><code>new DocumentBuilder()
-    .setTitle(&#x27;Api Tasks&#x27;)
-    .setDescription(&#x27;The tasks API description&#x27;)
-    .setVersion(&#x27;1.0&#x27;)
-    .build()</code>
-                        </td>
-                    </tr>
-
-
-            </tbody>
-        </table>
-</section>
-    <h3>src/config/typeorm.config.ts</h3>
-    <section>
-    <h3></h3>        <table class="table table-sm table-bordered">
-            <tbody>
-                <tr>
-                    <td class="col-md-4">
-                        <a name="typeOrmConfig"></a>
-                        <span class="name">
-                            <b>
-                            typeOrmConfig</b>
-                            <a href="#typeOrmConfig"><span class="icon ion-ios-link"></span></a>
-                        </span>
-                    </td>
-                </tr>
-                    <tr>
-                        <td class="col-md-4">
-                            <i>Type : </i>    <code>TypeOrmModuleOptions</code>
-
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="col-md-4">
-                            <i>Default value : </i><code>{
-    type: &#x27;mysql&#x27;,
-    host: process.env.DB_HOST,
-    port: parseInt(process.env.DB_PORT) || 13306,
-    username: process.env.DB_USER,
-    password: process.env.DB_PASSWORD,
-    database: process.env.DB_NAME,
-    entities: [__dirname + &#x27;/../entities/*.entity.{js, ts}&#x27;],
-    synchronize: true,
-    logging: &#x27;all&#x27;,
-    logger: &#x27;advanced-console&#x27;,
-}</code>
-                        </td>
-                    </tr>
-
-
-            </tbody>
-        </table>
-</section>
 
 
 
@@ -187,8 +228,8 @@
 
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
-            var COMPODOC_CURRENT_PAGE_CONTEXT = 'miscellaneous-variables';
-            var COMPODOC_CURRENT_PAGE_URL = 'variables.html';
+            var COMPODOC_CURRENT_PAGE_CONTEXT = 'class';
+            var COMPODOC_CURRENT_PAGE_URL = 'TaskUpdateDto.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
