--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -50,6 +50,8 @@
         <li>
             <b>@nestjs/common</b> : ^7.0.0</li>
         <li>
+            <b>@nestjs/config</b> : ^0.5.0</li>
+        <li>
             <b>@nestjs/core</b> : ^7.0.0</li>
         <li>
             <b>@nestjs/jwt</b> : ^7.0.0</li>
@@ -57,6 +59,8 @@
             <b>@nestjs/passport</b> : ^7.0.0</li>
         <li>
             <b>@nestjs/platform-express</b> : ^7.0.0</li>
+        <li>
+            <b>@nestjs/swagger</b> : ^4.5.9</li>
         <li>
             <b>@nestjs/typeorm</b> : ^7.1.0</li>
         <li>
@@ -77,6 +81,8 @@
             <b>rimraf</b> : ^3.0.2</li>
         <li>
             <b>rxjs</b> : ^6.5.4</li>
+        <li>
+            <b>swagger-ui-express</b> : ^4.1.4</li>
         <li>
             <b>typeorm</b> : ^0.2.25</li>
     </ul>
