--- a/documentation/injectables/AuthService.html
+++ b/documentation/injectables/AuthService.html
@@ -106,7 +106,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="8" class="link-to-prism">src/modules/auth/auth.service.ts:8</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/modules/auth/auth.service.ts:9</a></div>
                             </td>
                         </tr>
 
@@ -178,15 +178,15 @@
             <tr>
                 <td class="col-md-4">
                     <span class="modifier-icon icon ion-ios-reset"></span>
-                    <code>signIn(userData: <a href="../classes/UserDto.html">UserDto</a>)</code>
+                    <code>signIn(userData: <a href="../classes/AuthDto.html">AuthDto</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="19"
-                            class="link-to-prism">src/modules/auth/auth.service.ts:19</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="20"
+                            class="link-to-prism">src/modules/auth/auth.service.ts:20</a></div>
                 </td>
             </tr>
 
@@ -208,7 +208,7 @@
                                 <tr>
                                     <td>userData</td>
                                     <td>
-                                                <code><a href="../classes/UserDto.html" target="_self" >UserDto</a></code>
+                                                <code><a href="../classes/AuthDto.html" target="_self" >AuthDto</a></code>
                                     </td>
 
                                     <td>
@@ -250,15 +250,15 @@
             <tr>
                 <td class="col-md-4">
                     <span class="modifier-icon icon ion-ios-reset"></span>
-                    <code>signUp(userData: <a href="../classes/UserDto.html">UserDto</a>)</code>
+                    <code>signUp(userData: <a href="../classes/UserCreateDto.html">UserCreateDto</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="15"
-                            class="link-to-prism">src/modules/auth/auth.service.ts:15</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="16"
+                            class="link-to-prism">src/modules/auth/auth.service.ts:16</a></div>
                 </td>
             </tr>
 
@@ -280,7 +280,7 @@
                                 <tr>
                                     <td>userData</td>
                                     <td>
-                                                <code><a href="../classes/UserDto.html" target="_self" >UserDto</a></code>
+                                                <code><a href="../classes/UserCreateDto.html" target="_self" >UserCreateDto</a></code>
                                     </td>
 
                                     <td>
@@ -315,7 +315,8 @@
 import { InjectRepository } from &#x27;@nestjs/typeorm&#x27;;
 import { UserRepository } from &#x27;src/repositories/UserRepository&#x27;;
 import { JwtService } from &#x27;@nestjs/jwt&#x27;
-import { UserDto } from &#x27;src/dtos/user.dto&#x27;;
+import { UserCreateDto } from &#x27;src/dtos/user-create.dto&#x27;;
+import { AuthDto } from &#x27;src/dtos/auth.dto&#x27;;
 
 @Injectable()
 export class AuthService {
@@ -325,18 +326,18 @@ export class AuthService {
         private jwtService: JwtService,
     ) {}
 
-    async signUp(userData: UserDto): Promise&lt;void&gt; {
+    async signUp(userData: UserCreateDto): Promise&lt;void&gt; {
         return this.userRepository.signUp(userData);
     }
 
-    async signIn(userData: UserDto): Promise&lt;{ accessToken: string }&gt; {
+    async signIn(userData: AuthDto): Promise&lt;{ accessToken: string }&gt; {
         const email &#x3D; await this.userRepository.validateUserPassword(userData);
 
         if (!email) {
             throw new UnauthorizedException(&#x27;Invalid Credentials&#x27;);
         }
 
-        const accessToken &#x3D; await this.jwtService.sign(email);
+        const accessToken &#x3D; this.jwtService.sign({ email });
 
         return { accessToken };
     }
