--- a/documentation/injectables/LogginInterceptor.html
+++ b/documentation/injectables/LogginInterceptor.html
@@ -27,16 +27,18 @@
                    <compodoc-menu mode="normal"></compodoc-menu>
                </div>
                <!-- START CONTENT -->
-               <div class="content controller">
+               <div class="content injectable">
                    <div class="content-data">
 
 
 
 
 
+
+
 <ol class="breadcrumb">
-  <li>Controllers</li>
-  <li>AuthController</li>
+  <li>Injectables</li>
+  <li>LogginInterceptor</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -54,16 +56,8 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>src/modules/auth/auth.controller.ts</code>
+            <code>src/interceptors/loggin.interceptor.ts</code>
         </p>
-
-            <p class="comment">
-                <h3>Prefix</h3>
-            </p>
-            <p class="comment">
-                <code>auth</code>
-            </p>
-
 
 
 
@@ -82,10 +76,7 @@
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
-                                <a href="#signIn">signIn</a>
-                            </li>
-                            <li>
-                                <a href="#signUp">signUp</a>
+                                <a href="#intercept">intercept</a>
                             </li>
                         </ul>
                     </td>
@@ -99,6 +90,7 @@
     </table>
 </section>
 
+
             <section>
     
     <h3 id="methods">
@@ -108,33 +100,26 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="signIn"></a>
+                    <a name="intercept"></a>
                     <span class="name">
                         <b>
-                            signIn
+                            intercept
                         </b>
-                        <a href="#signIn"><span class="icon ion-ios-link"></span></a>
+                        <a href="#intercept"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>signIn(userData: <a href="../classes/AuthDto.html">AuthDto</a>)</code>
+<code>intercept(context: ExecutionContext, next: CallHandler)</code>
                 </td>
             </tr>
 
-            <tr>
-                <td class="col-md-4">
-                    <b>Decorators : </b>
-                    <br />
-                    <code>@Post(&#x27;/signin&#x27;)<br />@UsePipes(new ValidationPipe())<br /></code>
-                </td>
-            </tr>
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="21"
-                            class="link-to-prism">src/modules/auth/auth.controller.ts:21</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="7"
+                            class="link-to-prism">src/interceptors/loggin.interceptor.ts:7</a></div>
                 </td>
             </tr>
 
@@ -154,9 +139,21 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>userData</td>
+                                    <td>context</td>
                                     <td>
-                                                <code><a href="../classes/AuthDto.html" target="_self" >AuthDto</a></code>
+                                            <code>ExecutionContext</code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                                <tr>
+                                    <td>next</td>
+                                    <td>
+                                            <code>CallHandler</code>
                                     </td>
 
                                     <td>
@@ -171,7 +168,7 @@
                     <div>
                     </div>
                     <div class="io-description">
-                        <b>Returns : </b>    <code>Promise&lt;literal type&gt;</code>
+                        <b>Returns : </b>    <code>Observable&lt;any&gt;</code>
 
                     </div>
                     <div class="io-description">
@@ -181,116 +178,33 @@
             </tr>
         </tbody>
     </table>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="signUp"></a>
-                    <span class="name">
-                        <b>
-                            signUp
-                        </b>
-                        <a href="#signUp"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-            <tr>
-                <td class="col-md-4">
-<code>signUp(userData: <a href="../classes/UserCreateDto.html">UserCreateDto</a>)</code>
-                </td>
-            </tr>
+</section>
 
-            <tr>
-                <td class="col-md-4">
-                    <b>Decorators : </b>
-                    <br />
-                    <code>@Post(&#x27;/signup&#x27;)<br />@UsePipes(new ValidationPipe())<br /></code>
-                </td>
-            </tr>
-
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="15"
-                            class="link-to-prism">src/modules/auth/auth.controller.ts:15</a></div>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-
-                    <div class="io-description">
-                        <b>Parameters :</b>
-                        <table class="params">
-                            <thead>
-                                <tr>
-                                    <td>Name</td>
-                                    <td>Type</td>
-                                    <td>Optional</td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>userData</td>
-                                    <td>
-                                                <code><a href="../classes/UserCreateDto.html" target="_self" >UserCreateDto</a></code>
-                                    </td>
-
-                                    <td>
-                                        No
-                                    </td>
-
-
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div>
-                    </div>
-                    <div class="io-description">
-                        <b>Returns : </b>    <code>Promise&lt;void&gt;</code>
-
-                    </div>
-                    <div class="io-description">
-                        
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</section>    </div>
+    </div>
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Controller, Post, Body, UsePipes } from &#x27;@nestjs/common&#x27;;
-import { AuthService } from &#x27;./auth.service&#x27;;
-import { ValidationPipe } from &#x27;src/pipes/validation.pipes&#x27;;
-import { UserCreateDto } from &#x27;src/dtos/user-create.dto&#x27;;
-import { AuthDto } from &#x27;src/dtos/auth.dto&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { CallHandler, ExecutionContext, Injectable, NestInterceptor, Logger } from &#x27;@nestjs/common&#x27;;
+import { Observable } from &#x27;rxjs&#x27;;
+import { tap } from &#x27;rxjs/operators&#x27;;
 
-@Controller(&#x27;auth&#x27;)
-export class AuthController {
-    constructor(
-        private authService: AuthService,
-    ) {}
+@Injectable()
+export class LogginInterceptor implements NestInterceptor {
+  intercept(context: ExecutionContext, next: CallHandler): Observable&lt;any&gt; {
+    const req &#x3D; context.switchToHttp().getRequest();
+    const method &#x3D; req.method;
+    const url &#x3D; req.url;
+    const now &#x3D; Date.now();
 
-    @Post(&#x27;/signup&#x27;)
-    @UsePipes(new ValidationPipe())
-    signUp(@Body() userData: UserCreateDto): Promise&lt;void&gt; {
-        return this.authService.signUp(userData);
-    }
-
-    @Post(&#x27;/signin&#x27;)
-    @UsePipes(new ValidationPipe())
-    signIn(@Body() userData: AuthDto): Promise&lt;{ accessToken: string }&gt; {
-        return this.authService.signIn(userData);
-    }
+    return next.handle().pipe(
+      tap(() &#x3D;&gt; Logger.log(&#x60;${method} ${url} ${Date.now() - now}ms&#x60;, context.getClass().name)),
+    );
+  }
 }
 </code></pre>
     </div>
+
 </div>
-
-
 
 
 
@@ -319,8 +233,8 @@ export class AuthController {
 
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
-            var COMPODOC_CURRENT_PAGE_CONTEXT = 'controller';
-            var COMPODOC_CURRENT_PAGE_URL = 'AuthController.html';
+            var COMPODOC_CURRENT_PAGE_CONTEXT = 'injectable';
+            var COMPODOC_CURRENT_PAGE_URL = 'LogginInterceptor.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
