--- a/documentation/injectables/ValidationPipe.html
+++ b/documentation/injectables/ValidationPipe.html
@@ -77,6 +77,14 @@
                         <ul class="index-list">
                             <li>
                                     <span class="modifier">Private</span>
+                                <a href="#formatErrors">formatErrors</a>
+                            </li>
+                            <li>
+                                    <span class="modifier">Private</span>
+                                <a href="#isEmpty">isEmpty</a>
+                            </li>
+                            <li>
+                                    <span class="modifier">Private</span>
                                 <a href="#toValidate">toValidate</a>
                             </li>
                             <li>
@@ -105,6 +113,150 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
+                    <a name="formatErrors"></a>
+                    <span class="name">
+                        <b>
+                            <span class="modifier">Private</span>
+                            formatErrors
+                        </b>
+                        <a href="#formatErrors"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <span class="modifier-icon icon ion-ios-reset"></span>
+                    <code>formatErrors(errors: any[])</code>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-line">Defined in <a href="" data-line="29"
+                            class="link-to-prism">src/pipes/validation.pipes.ts:29</a></div>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+
+                    <div class="io-description">
+                        <b>Parameters :</b>
+                        <table class="params">
+                            <thead>
+                                <tr>
+                                    <td>Name</td>
+                                    <td>Type</td>
+                                    <td>Optional</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>errors</td>
+                                    <td>
+                                            <code>any[]</code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div>
+                    </div>
+                    <div class="io-description">
+                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+
+                    </div>
+                    <div class="io-description">
+                        
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="isEmpty"></a>
+                    <span class="name">
+                        <b>
+                            <span class="modifier">Private</span>
+                            isEmpty
+                        </b>
+                        <a href="#isEmpty"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <span class="modifier-icon icon ion-ios-reset"></span>
+                    <code>isEmpty(value: <a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank">any</a>)</code>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-line">Defined in <a href="" data-line="37"
+                            class="link-to-prism">src/pipes/validation.pipes.ts:37</a></div>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+
+                    <div class="io-description">
+                        <b>Parameters :</b>
+                        <table class="params">
+                            <thead>
+                                <tr>
+                                    <td>Name</td>
+                                    <td>Type</td>
+                                    <td>Optional</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>value</td>
+                                    <td>
+                                                <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div>
+                    </div>
+                    <div class="io-description">
+                        <b>Returns : </b>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+
+                    </div>
+                    <div class="io-description">
+                        
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
                     <a name="toValidate"></a>
                     <span class="name">
                         <b>
@@ -125,8 +277,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="19"
-                            class="link-to-prism">src/pipes/validation.pipes.ts:19</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="24"
+                            class="link-to-prism">src/pipes/validation.pipes.ts:24</a></div>
                 </td>
             </tr>
 
@@ -197,8 +349,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="7"
-                            class="link-to-prism">src/pipes/validation.pipes.ts:7</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="8"
+                            class="link-to-prism">src/pipes/validation.pipes.ts:8</a></div>
                 </td>
             </tr>
 
@@ -268,14 +420,19 @@ import { plainToClass } from &#x27;class-transformer&#x27;;
 
 @Injectable()
 export class ValidationPipe implements PipeTransform&lt;any&gt; {
+  
   async transform(value: any, { metatype }: ArgumentMetadata) {
+    if (value instanceof Object &amp;&amp; this.isEmpty(value)) {
+        throw new BadRequestException(&#x27;Validation failed: No body submitted&#x27;)
+    }
+
     if (!metatype || !this.toValidate(metatype)) {
       return value;
     }
     const object &#x3D; plainToClass(metatype, value);
     const errors &#x3D; await validate(object);
     if (errors.length &gt; 0) {
-      throw new BadRequestException(&#x27;Validation failed&#x27;);
+      throw new BadRequestException(&#x60;Validation failed: ${this.formatErrors(errors)}&#x60;);
     }
     return value;
   }
@@ -283,6 +440,21 @@ export class ValidationPipe implements PipeTransform&lt;any&gt; {
   private toValidate(metatype: Function): boolean {
     const types: Function[] &#x3D; [String, Boolean, Number, Array, Object];
     return !types.includes(metatype);
+  }
+
+  private formatErrors(errors: any[]) {
+    return errors.map(error &#x3D;&gt; {
+      for (const [key] of Object.entries(error.constraints)) {
+        return error.constraints[key];
+      }
+    }).join(&#x27;, &#x27;)
+  }
+
+  private isEmpty(value: any) {
+      if (Object.keys(value).length &gt; 0) {
+          return false;
+      } 
+      return true;
   }
 }</code></pre>
     </div>
